@@ -28,6 +28,8 @@
  * Lib/secp256k1: Added support BIP340 - new function SchnorrVerify()
  * Lib/Others/cgo/sipasec: Added Schnorr_Verify() - note: build lib with "./configure --enable-module-schnorrsig --enable-experimental"
  * Lib: btc.GetSigOpCount() now aborts counting on OP_RETURN (was wrongly rejecting testnet block #1971687)
+ * Wallet: New command line switch "-cfg <fname>" to overwrite env's GOCOIN_WALLET_CONFIG variable
+ * Wallet: No longer neccessary to add "-segwit" command line switch for "-bech32" to work
 
 1.9.8 - 2020-07-09
 * New tools "utxo_compress" and "utxo_decompress" to compress/decompress UTXO.db file
